--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <input id="pass" type="password" placeholder="Contraseña" />
     <div class="row">
       <button id="loginBtn" class="btn">Ingresar</button>
-      <a href="home.html" class="btn ghost">Volver</a>
+      <a href="index.html" class="btn ghost">Volver</a>
     </div>
     <p id="loginMsg" class="mensaje"></p>
   </div>
